--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>AngelXin_dianping</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>hm-dianping</name>
-    <description>Angel's 点评项目</description>
+    <description>Angel's 点滴留影</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -133,6 +133,20 @@
             <artifactId>okhttp</artifactId>
             <version>4.10.0</version>
         </dependency>
+
+        <!--一个高性能的、Java实现的，用于实现JVM缓存的-->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
+        <!--异步同步工具canel 性能好，零代码侵入，但是不能达到强一致性 -->
+        <dependency>
+            <groupId>top.javatool</groupId>
+            <artifactId>canal-spring-boot-starter</artifactId>
+            <version>1.2.1-RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
