--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
             <version>2.6</version>
         </dependency>
 
-
+        <!--分布式存储minio-->
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
@@ -146,6 +146,7 @@
             <artifactId>canal-spring-boot-starter</artifactId>
             <version>1.2.1-RELEASE</version>
         </dependency>
+
 
     </dependencies>
 
