--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,10 +19,11 @@ spring:
         - 192.168.241.128:8883
     lettuce:
       pool:
-        max-active: 10
-        max-idle: 10
-        min-idle: 1
-        time-between-eviction-runs: 10s
+        max-active: 20   #连接池最大连接数（使用负值表示没有限制）
+        max-idle: 10      #连接池中的最大空闲连接
+        min-idle: 10       #连接池中的最小空闲连接
+        time-between-eviction-runs: 10s #指定两次空闲连接回收（eviction）的时间间隔
+        max-wait: 15   #最大阻塞等待时间（负数表示没有限制）
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
 mybatis-plus:
@@ -30,5 +31,5 @@ mybatis-plus:
 logging:
   level:
     com.hmdp: debug
-#reids:
-#  address: redis://192.168.241.128:6379
+
+
